# aoc

./: .gitignore  Cargo.toml  README.md
.metals/: metals.h2.db  metals.lock.db
2020/c_src/: common.cpp  day1.cpp
2020/src/: aoc.rs  main.rs
2021/: Cargo.toml
2021/c_src/: 1-pthread.c  1-serial.c  12-serial.c  2-serial.c  21-1.c  24-byhand.c  3-omp.c  3-serial.c  6-serial.c  7-serial.c  Makefile
2021/src/: aoc.rs  aoc21.rs  main.rs
2022/: Cargo.toml  init.sh
2022/c_src/: Makefile  day20.cpp
2022/c_src/lib/: tlhash.c  tlhash.h
2022/py_src/: day01.py  day13.py
2022/src/: aoc22.rs  main.rs
2022/src/aoc22/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs
2023/: Cargo.toml  init.sh
2023/src/: aoc23.rs  main.rs
2024/: Cargo.toml  init.sh
2024/src/: main.rs
aoc_rs/: Cargo.toml  init.sh
aoc_rs/src/: aoc.rs  aoc22.rs  aoc23.rs  aoc24.rs  main.rs
aoc_rs/src/aoc22/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs
aoc_rs/src/aoc23/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs
aoc_rs/src/aoc24/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs
benches/: bench.rs
c_sources/: common.h  day2.cpp  day3.cpp  day4.cpp
inputs/2024/: day14.txt  day18.txt
src/: aoc.rs  aoc20.rs  aoc21.rs  day19.pest  main.rs
(+93 files in other folders)
