[package]
name = "aoc2022"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "*"
# lazy_static = "*"
# rayon = "*"
# sliding_windows = "*"
# priority-queue = "*"
# nalgebra-glm = "*"
itertools = "*"
sscanf = "*"
# fasthash = "*"

[profile.release]
debug = true