[package]
name = "aoc2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "*"
lazy_static = "*"
# rayon = "*"
# sliding_windows = "*"
# priority-queue = "*"
nalgebra-glm = "*"
itertools = "*"
sscanf = "*"
# fasthash = "*"
colored = "*"
regex = "*"
gcd = "*"

[profile.release]
debug = true
